<resources>
    <string name="app_name">Vehtest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">VehTest App</string>
    <string name="nav_header_subtitle" translatable="false">ver. 1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About</string>
    <string name="app_title">VehTest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide_menu_home">View mode</string>
    <string name="slide_menu_test">Test mode</string>
    <string name="gps_check_message">Location is unavailable. Please turn it on.</string>
    <string name="test_acceleration">Acceleration [m/s²]</string>
    <string name="test_list">Tests list</string>
    <string name="carMarkName">Mark</string>
    <string name="engineName">Engine</string>
    <string name="powerName">Power [HP]</string>
    <string name="madeDateName">Year of manufacture</string>
    <string name="twentyName">0-20 kph</string>
    <string name="fiftyName">0-50 kph</string>
    <string name="seventyName">0-70 kph</string>
    <string name="ninetyName">0-90 kph</string>
    <string name="hundredName">0-100 kph</string>
    <string name="delete_name">Delete</string>
    <string name="testNotExists">Test not executed</string>
    <string name="author_text">Author: Mateusz Janel | janel.mateusz@gmail.com</string>
</resources>
